# mms

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  Makefile  README.md  justfile
.github/: SECURITY.md
.github/workflows/: book.yml  check.yml  test.yml
book/: book.toml
book/assets/js/: mermaid-init.js
book/src/: SUMMARY.md  introduction.md  not-found.md
book/src/reference/cli-ui/: README.md
crates/mms/: Cargo.toml
crates/mms-tui/: Cargo.toml
crates/mms/src/: main.rs
crates/mms/src/article/: api.rs  model.rs  repository.rs  service.rs
crates/mms_inventory/: Cargo.toml
crates/mms_inventory/src/: lib.rs
crates/mms_inventory/src/model/: mod.rs  stock.rs  store.rs
crates/mms_tui/: Cargo.toml
crates/mms_tui/src/: lib.rs
