[package]
name = "mms"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
mms_tui = { path = "../mms_tui" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
tower = "0.5.2"
